[gd_scene load_steps=6 format=3 uid="uid://cm8ctnojcqo02"]

[ext_resource type="PackedScene" uid="uid://201dt1njvo7k" path="res://assets/gameObjects/KayKit_Skeletons_1.0_FREE/KayKit_Skeletons_1.0_FREE/characters/gltf/Skeleton_Rogue.glb" id="1_oul6g"]
[ext_resource type="Script" uid="uid://dbrbjvdtmr5a1" path="res://player/player.gd" id="1_yw30f"]
[ext_resource type="AudioStream" uid="uid://b7ef7uxg28bjo" path="res://assets/audio/land2-43790.mp3" id="5_g6k8r"]
[ext_resource type="PackedScene" uid="uid://b4a4aa3xn8vvp" path="res://assets/gameObjects/flashlight/flashlight.tscn" id="5_qjkh3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rkbax"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_yw30f")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_rkbax")

[node name="Skeleton_Rogue" parent="." instance=ExtResource("1_oul6g")]
visible = false

[node name="Camera3Dfps" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.75, 0)
current = true

[node name="MantleRay" type="RayCast3D" parent="."]
transform = Transform3D(-0.99863, -0.0523359, -2.28768e-09, 3.82137e-15, 4.37114e-08, -1, 0.0523359, -0.99863, -4.36515e-08, 0, 1, 0)

[node name="MantleCheckAbove" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.25, 0)

[node name="Flashlight" parent="." instance=ExtResource("5_qjkh3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.6, 1.4, 0.5)

[node name="WalkSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_g6k8r")
volume_db = -30.0

[node name="JumpSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_g6k8r")
volume_db = -20.0

[node name="MantleTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]
